# hydrodynamic-swarm

./: .dependabot.yml  .gitattributes  .gitignore  .gitlab-ci.yml  AGENTS(jules).md  AGENTS.md  ARCHITECTURE.md  CODEOWNERS  CODE_DUMP.md  CODE_MAP.md  CRUCIBLE.md  Cargo.toml  Cargo.toml.old  LICENSE  README.md  ROADMAP.md  audit.toml  build.rs  config.toml  config.toml.bak  crucible.sh  crucible_tui.sh  opencode.json  sweep.sh  tune.sh
.agent/: rules.md
.githooks/: post-commit  pre-commit
.grok/: settings.json
benches/: field_bench.rs
docs/: crucible.md  experiments.md  foundation.md  roadmap.md
kernels/: decay.cu  decay.ptx
logs/: 2026-03-01_20-03-31_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_20-04-20_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_20-05-06_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_20-18-14_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_20-19-17_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_20-20-09_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_21-34-05_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_21-34-49_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-48-47_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-49-06_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-49-35_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-51-06_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-51-42_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-52-18_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-52-55_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_22-53-31_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-06-15_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-06-52_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-07-29_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-08-05_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-08-41_bert_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-31-08_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-43-54_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-44-33_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-45-10_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-45-48_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-46-26_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-47-04_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-47-41_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  2026-03-01_23-48-19_unsloth_v3-forcecap80_T0_9_s150_a2_d100.jsonl  (+164 more)
research_logs/: 2026-03-01_docs-add-readme.md  (+30 more)
(+52 files in other folders)
