[package]
name = "hydrodynamic-swarm"
version = "0.2.0"
edition = "2021"
description = "SplatRAG v1 — Hydrodynamic swarm physics for retrieval-augmented generation"

[features]
default = []
metal-compute = ["dep:wgpu", "dep:bytemuck", "dep:pollster"]

[dependencies]
candle-core = { version = "0.8", features = ["metal"] }
candle-nn = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.4"
rand = "0.8"
tracing = "0.1"
tokenizers = "0.19"
toml = "0.8"
wgpu = { version = "24", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
