[package]
name = "hydrodynamic-swarm"
version = "0.2.0"
edition = "2021"
description = "SplatRAG v1 — Hydrodynamic swarm physics for retrieval-augmented generation"

[dependencies]
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = { version = "0.9", features = ["cuda"] }
candle-transformers = { version = "0.9", features = ["cuda"] }

anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
rand = "0.8"
tracing = "0.1"
tokenizers = "0.22"
toml = "1"
