[package]
name = "hydrodynamic-swarm"
version = "0.2.0"
edition = "2021"
description = "Unified Hydrodynamic Ouroboros Swarm — SplatRAG + 9-Node Matrix"

[features]
default = ["with-candle", "with-cuda"]
with-candle = ["candle-core", "candle-nn", "candle-transformers", "hf-hub"]
with-cuda = ["candle-core/cuda", "candle-nn/cuda"]
with-metal = ["candle-core/metal", "candle-nn/metal"]
metal-compute = []

[dependencies]
tokio = { version = "1.35", features = ["full"] }
nalgebra = "0.32"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
safetensors = "0.7"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokenizers = "0.22"
toml = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
bincode = "1.3"
parking_lot = "0.12"
futures = "0.3"
crossbeam = "0.8"
rayon = "1.7"
num-traits = "0.2"
num-derive = "0.3"
unicode-normalization = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }

candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.3", optional = true }
cudarc = { version = "0.19", features = ["f16", "cuda-12000"] }

[build-dependencies]
cc = "1.0"
